kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audio-backend-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audio-backend
  template:
    metadata:
      labels:
        app: audio-backend
    spec:
      containers:
      - name: audio-backend-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: us-central1-docker.pkg.dev/athletics-hub/audio-backend-repo/audio-backend-gke:latest
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
