kubernetes/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-backend
spec:
  selector:
    app: audio-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
